# giba

./: .gitmodules  CMakeLists.txt  todo.org
extlib/: CMakeLists.txt
src/: CMakeLists.txt  config.cpp  config.h  main.cpp  ui.cpp  ui.h
src/gibalib/: CMakeLists.txt  gibalib.cpp  gibalib.h  opcodes.cpp  opcodes.h
src/shaders/: CMakeLists.txt  colored_triangle.vert  default_lit.frag  textured_lit.frag  tri_mesh.vert  triangle.frag
src/spock/: CMakeLists.txt  spock.cpp  spock.h  vk_init.cpp  vk_init.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_textures.h  vk_types.h
tests/: CMakeLists.txt  giba_tests.cpp
tests/gibalib/: gibalib_test.cpp  opcodes.cpp
tests/spock/: spock_test.cpp
